# todolist

./: Cargo.toml  Dockerfile  Justfile  chatgpt.md  todolist.code-workspace
.github/workflows/: rust.yml
application/: Cargo.toml
application/src/: commands.rs  lib.rs  queries.rs
applications/web/: Cargo.toml  Trunk.toml  index.css  index.html
applications/web/src/: app.rs  ionic.rs  main.rs  runtime.rs  screens.rs
applications/web/src/components/: countdown.rs  create_task_modal.rs  current_task.rs  home.rs  long_press_button.rs  long_press_countdown.rs  long_press_fab.rs  mod.rs  sticky_note.rs
applications/web/src/hooks/: mod.rs  use_longpress.rs  use_runtime.rs  use_task_state.rs
applications/web/src/screens/: mod.rs
applications/web/src/screens/task_screen/: create_task_modal.rs  error_toast.rs  mod.rs  sticky_note.rs  task_buttons.rs  task_create_button.rs  task_error.rs  task_screen.rs  task_sticky_note.rs
bindings/web/: Cargo.toml  Justfile
bindings/web/src/: home.rs  lib.rs  todolist.rs
core/: Cargo.toml
core/modules/local_storage/: Cargo.toml
core/modules/local_storage/src/: lib.rs
core/src/: infrastructure.rs  lib.rs
core/src/application/: commands.rs  queries.rs  services.rs
core/src/domain/: todolist.rs
core/src/infrastructure/: in_memory_todolist_store.rs
domain/todolist/: Cargo.toml
domain/todolist/src/: lib.rs  task.rs  todolist.rs
domain/todolist/src/todolist/: commands.rs  events.rs
domain/todolist/tests/: todolist.rs
domains/todolist/: Cargo.toml
domains/todolist/src/: errors.rs  events.rs  framework.rs  lib.rs  messages.rs  projections.rs  scalars.rs  snapshot.rs
domains/todolist/tests/: todolist.rs
drivers/local-storage/: Cargo.toml
drivers/local-storage/src/: lib.rs
drivers/ui/: Cargo.toml
drivers/ui/src/: app.rs  create_task_modal.rs  home.rs  lib.rs
infrastructure/ionic/: .eslintrc.json
infrastructure/ionic/src/: App.tsx  main.tsx
infrastructure/ionic/src/features/: CreateTaskModal.tsx
infrastructure/ionic/src/wasm/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
infrastructure/local-storage/: Cargo.toml
infrastructure/local-storage/src/: lib.rs
infrastructure/wasm/: Cargo.toml
infrastructure/wasm/src/: todolist.rs
interactions/: Cargo.toml
interactions/src/: commands.rs  lib.rs  ports.rs  presenters.rs  queries.rs  services.rs
ionic/: package.json  vite.config.ts
ionic/src/: App.tsx
ionic/src/features/: CreateTaskModal.tsx
ionic/src/pages/: Home.tsx
ionic/src/wasm/: js.d.ts  js.js  js_bg.wasm  js_bg.wasm.d.ts  package.json
react/: .eslintrc.json  .prettierrc  package.json
react/app/: init.tsx  layout.tsx  page.tsx  view.ts
rust/: Cargo.toml  Justfile  review.txt
rust/src/: application.rs  domain.rs
rust/src/application/: adapters.rs  dto.rs
rust/src/domain/: services.rs  todolist.rs  use_cases.rs
rust/src/infrastructure/: in_memory_store.rs
