[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.73"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
