[package]
name = "todolist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.73"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"

# Waiting for 0.2.88
# console_error_panic_hook = { version = "0.1.7", optional = true }
# js-sys = "0.3.64"
# serde-wasm-bindgen = "0.4"
# wasm-bindgen = "0.2.87"
# wasm-bindgen-futures = "0.4.37"

wasm-bindgen= { path = "../wasm-bindgen" }
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures" }
js-sys = { path = "../wasm-bindgen/crates/js-sys" }
