[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
gloo = "0.10.0"
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
interactions = { path = "../../interactions" }
js-sys = "0.3.65"
pubsub = "0.2.3"
stylist = "0.13.0"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", features = ["DomTokenList", "Element"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
