[package]
name = "js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
application = { path = "../../application" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
local-storage = { path = "../../infrastructure/local-storage" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
