[package]
name = "local-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
gloo-storage = "0.3.0"
interactions = { path = "../../interactions" }
serde = { version = "1.0.130", features = ["derive"] }
