[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
interactions = { path = "../../interactions" }
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = "0.3.65"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
