[package]
name = "local-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../../application" }
async-trait = "0.1.73"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.107"
web-sys = { version = "0.3.64", features = ["Storage", "Window"] }
